Bug 1350401: Cleanup outline-painting-related logic. r=mats

MozReview-Commit-ID: ggDzDRrPIm