layout/painting/nsCSSRendering.cpp
@@ -960,13 +960,8 @@ nsCSSRendering::PaintOutline(nsPresContext* aPresContext,
 
   // Get our style context's color struct.
   const nsStyleOutline* ourOutline = aStyleContext->StyleOutline();
-  MOZ_ASSERT(ourOutline != NS_STYLE_BORDER_STYLE_NONE,
-             "shouldn't have created nsDisplayOutline item");
 
-  uint8_t outlineStyle = ourOutline->mOutlineStyle;
-  nscoord width = ourOutline->GetOutlineWidth();
-
-  if (width == 0 && outlineStyle != NS_STYLE_BORDER_STYLE_AUTO) {
+  if (!ourOutline->ShouldPaintOutline()) {
     // Empty outline
     return;
   }
@@ -999,6 +994,8 @@ nsCSSRendering::PaintOutline(nsPresContext* aPresContext,
   if (innerRect.Contains(aDirtyRect))
     return;
 
+  nscoord width = ourOutline->GetOutlineWidth();
+
   nsRect outerRect = innerRect;
   outerRect.Inflate(width, width);
 
@@ -1017,6 +1014,7 @@ nsCSSRendering::PaintOutline(nsPresContext* aPresContext,
   RectCornerRadii outlineRadii;
   ComputePixelRadii(twipsRadii, twipsPerPixel, &outlineRadii);
 
+  uint8_t outlineStyle = ourOutline->mOutlineStyle;
   if (outlineStyle == NS_STYLE_BORDER_STYLE_AUTO) {
     if (nsLayoutUtils::IsOutlineStyleAutoEnabled()) {
       nsITheme* theme = aPresContext->GetTheme();
